--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     <!--- basic page needs
     ================================================== -->
   <meta name="yandex-verification" content="33730aaf93aa663d" />
-    <title>Dum3bi- {{ page.title }}</title>
+    <title>{{ page.title }} | {{ site.title }}</title>
     <meta name="description" content="Dumebi Iwuchukwu is an Art Director, Brand Strategist and Developer based in Lagos, Nigeria.">
     <meta name="theme-color" content="#449cff"/>
 
